[package]
name = "decode_ceph"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>", "Chris MacNaughton <chmacnaughton@gmail.com>"]

[dependencies]
bitflags = "*"
byteorder = "*"
clap = {version = "*", features = ["yaml"]}
crc = "*"
ease = "*"
enum_primitive = "*"
log = "*"
num = "*"
pcap = "*"
rust-crypto = "*"
simple_logger = "*"
time = "*"
users = "*"
yaml-rust = "*"
